overflow issue handled

--- a/frontend/public/styles.css
+++ b/frontend/public/styles.css
@@ -10,6 +10,7 @@ body {
   background: #eee;
   background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
   padding: 0 16px;
+  overflow-x: hidden;
 }
 
 header {
